feat(go-rewrite): implemented get performance metrics endpoint
